test/fail/def-parameters.grace
def name = object {}

name(object {})
